--- a/pl.html
+++ b/pl.html
@@ -3,42 +3,18 @@
 <head>
   <title>Game24x Player</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Shaka Player -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.6/controls.min.css" crossorigin="anonymous">
-  <!-- CryptoJS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
 </head>
 
-<body bgcolor="black" style="margin:0" oncontextmenu="return false" onkeydown="return false" onmousedown="return false">
-<style>
-  .shaka-spinner-container { display: none; }
-  .video-fill video { object-fit: cover; }
-  .shaka-overflow-menu button:hover { background-color: rgb(45, 45, 45); }
-  .shaka-overflow-button-label { color: rgb(245, 245, 245); }
-  .shaka-current-selection-span { color: rgb(202, 202, 202); }
-  .shaka-settings-menu { background-color: rgb(35, 35, 35); color: #fff; }
-  .shaka-settings-menu button { color: #fff; }
-  .shaka-settings-menu button:hover { background-color: rgb(45, 45, 45); }
-  .shaka-bottom-controls { display: flex; flex-direction: column-reverse; }
-</style>
-
+<body bgcolor="black" style="margin:0">
 <div id="videoContainer" class="container video-fill" data-shaka-player-container
      style="position:absolute;z-index:-1;top:0;left:0;width:100%;height:100%;">
-  <video autoplay data-shaka-player id="video"
-         poster="https://i.ibb.co.com/SwbNnBJn/ggg.png"
-         style="width:100%;height:100%;"></video>
+  <video autoplay data-shaka-player id="video" style="width:100%;height:100%;"></video>
 </div>
 
-<a href="https://t.me/game24x" target="_blank">
-  <span style="position:absolute;z-index:100;top:6px;left:5px;height:30px;width:100px;
-               color:#ccc;border:2px solid #ccc;padding:1px 0;border-radius:2px;text-align:center;">
-    Join us
-  </span>
-</a>
-
 <script>
-  // --- Decrypt AES data ---
   function decryptData(data) {
     const key = CryptoJS.enc.Utf8.parse("2ec7352cfcd6d116c4b0800fa95a2eea");
     const iv  = CryptoJS.enc.Utf8.parse("2f0af185c7575a7f");
@@ -50,7 +26,6 @@
     return decrypted.toString(CryptoJS.enc.Utf8);
   }
 
-  // --- Fetch streams.json and get channel ---
   async function loadChannel(id) {
     const res = await fetch("/streams.json");
     const streams = await res.json();
@@ -58,60 +33,32 @@
     if (!stream) throw new Error("Channel not found: " + id);
 
     const decrypted = decryptData(stream.data);
-    console.log("Decrypted raw:", decrypted); // DEBUG
-
-    try {
-      return JSON.parse(decrypted);
-    } catch (err) {
-      throw new Error("Failed to parse decrypted data: " + decrypted);
-    }
+    return JSON.parse(decrypted);
   }
 
-  // --- Resize helper ---
   function resizePlayer() {
     const container = document.getElementById('videoContainer');
     container.style.width = window.innerWidth + 'px';
     container.style.height = window.innerHeight + 'px';
   }
 
-  // --- Init player ---
   async function init() {
     const params = new URLSearchParams(window.location.search);
     const id = params.get("id") || "tnt1";
 
-    const { url, clearkey } = await loadChannel(id);
+    const { url, license_key, license_key2 } = await loadChannel(id);
 
     const video = document.getElementById('video');
     const ui = video['ui'];
-    ui.configure({
-      addBigPlayButton: true,
-      controlPanelElements: [
-        'time_and_duration','mute','volume','play_pause','spacer',
-        'quality','picture_in_picture','fullscreen','overflow_menu'
-      ],
-      seekBarColors: {
-        base: 'rgba(255, 255, 255, 0.3)',
-        buffered: 'rgba(255, 255, 255, 0.54)',
-        played: 'rgb(255, 0, 0)'
-      }
-    });
-
     const controls = ui.getControls();
     const player = controls.getPlayer();
 
-    let drmKeys = {};
-
-    if (typeof clearkey === "string" && clearkey.includes(":")) {
-      const [keyId, key] = clearkey.split(":");
-      drmKeys[keyId] = key;
-    } else if (typeof clearkey === "object") {
-      drmKeys = clearkey;
-    } else {
-      console.warn("Unknown clearkey format:", clearkey);
-    }
-
     player.configure({
-      drm: { clearKeys: drmKeys },
+      drm: {
+        clearKeys: {
+          [license_key]: license_key2
+        }
+      },
       streaming: {
         bufferingGoal: 60,
         rebufferingGoal: 2,
