--- a/pl.html
+++ b/pl.html
@@ -1,84 +1,149 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Game24x Player</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Game24x</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.6/controls.min.css" crossorigin="anonymous">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
+  <style>
+    body { margin:0; background:black; }
+    .shaka-spinner-container { display: none; }
+    .video-fill video { object-fit: cover; }
+    .shaka-overflow-menu button:hover { background-color: rgb(45, 45, 45); }
+    .shaka-overflow-button-label { color: rgb(245, 245, 245); }
+    .shaka-current-selection-span { color: rgb(202, 202, 202); }
+    .shaka-settings-menu { background-color: rgb(35, 35, 35); color: #fff; }
+    .shaka-settings-menu button { color: #fff; }
+    .shaka-settings-menu button:hover { background-color: rgb(45, 45, 45); }
+    .shaka-bottom-controls { display: flex; flex-direction: column-reverse; }
+    #tglogo {
+      position: absolute; right: 80px; top: 30px; height: 60px; width: 100px;
+    }
+    a#join-tg span {
+      position:absolute; z-index:100; top:6px; left:5px; height:30px; width:100px;
+      color:#ccc; border:2px solid #ccc; padding:1px 0; border-radius:2px; text-align:center;
+    }
+  </style>
 </head>
 
-<body bgcolor="black" style="margin:0">
-<div id="videoContainer" class="container video-fill" data-shaka-player-container
-     style="position:absolute;z-index:-1;top:0;left:0;width:100%;height:100%;">
-  <video autoplay data-shaka-player id="video" style="width:100%;height:100%;"></video>
-</div>
+<body oncontextmenu="return false" onkeydown="return false" onmousedown="return false">
+  <div id="videoContainer" class="container video-fill" data-shaka-player-container
+       style="position:absolute; z-index:-1; top:0; left:0; width:100%; height:100%;">
+    <video autoplay data-shaka-player id="video" 
+           poster="https://i.ibb.co/SwbNnBJn/ggg.png"
+           style="width:100%;height:100%;"></video>
+  </div>
 
-<script>
-  function decryptData(data) {
-    const key = CryptoJS.enc.Utf8.parse("2ec7352cfcd6d116c4b0800fa95a2eea");
-    const iv  = CryptoJS.enc.Utf8.parse("2f0af185c7575a7f");
-    const decrypted = CryptoJS.AES.decrypt(
-      { ciphertext: CryptoJS.enc.Base64.parse(data) },
-      key,
-      { iv: iv, mode: CryptoJS.mode.CBC, padding: CryptoJS.pad.Pkcs7 }
-    );
-    return decrypted.toString(CryptoJS.enc.Utf8);
-  }
+  <a href="https://t.me/game24x" target="_blank" id="join-tg">
+    <span>Join us</span>
+  </a>
 
-  async function loadChannel(id) {
-    const res = await fetch("/streams.json");
-    const streams = await res.json();
-    const stream = streams.find(s => s.id === id);
-    if (!stream) throw new Error("Channel not found: " + id);
-
-    const decrypted = decryptData(stream.data);
-    return JSON.parse(decrypted);
-  }
-
-  function resizePlayer() {
-    const container = document.getElementById('videoContainer');
-    container.style.width = window.innerWidth + 'px';
-    container.style.height = window.innerHeight + 'px';
-  }
-
-  async function init() {
-    const params = new URLSearchParams(window.location.search);
-    const id = params.get("id") || "tnt1";
-
-    const { url, license_key, license_key2 } = await loadChannel(id);
-
-    const video = document.getElementById('video');
-    const ui = video['ui'];
-    const controls = ui.getControls();
-    const player = controls.getPlayer();
-
-    player.configure({
-      drm: {
-        clearKeys: {
-          [license_key]: license_key2
-        }
-      },
-      streaming: {
-        bufferingGoal: 60,
-        rebufferingGoal: 2,
-        lowLatencyMode: true,
-        retryParameters: { maxAttempts: 5, timeout: 10000 }
-      }
-    });
-
-    try {
-      await player.load(url);
-      video.muted = false;
-      await video.play();
-    } catch (err) {
-      console.error("Error loading stream:", err);
+  <script>
+    // Decrypt AES-encrypted stream data
+    function decryptData(data) {
+      const key = CryptoJS.enc.Utf8.parse("2ec7352cfcd6d116c4b0800fa95a2eea");
+      const iv  = CryptoJS.enc.Utf8.parse("2f0af185c7575a7f");
+      const decrypted = CryptoJS.AES.decrypt(
+        { ciphertext: CryptoJS.enc.Base64.parse(data) },
+        key,
+        { iv: iv, mode: CryptoJS.mode.CBC, padding: CryptoJS.pad.Pkcs7 }
+      );
+      return decrypted.toString(CryptoJS.enc.Utf8);
     }
-  }
 
-  document.addEventListener('shaka-ui-loaded', init);
-  window.addEventListener('resize', resizePlayer);
-  resizePlayer();
-</script>
+    // Load channel stream info
+    async function loadChannel(id) {
+      const res = await fetch("https://api.game24x.xyz/streams.json");
+      const streams = await res.json();
+      const stream = streams.find(s => s.id === id);
+      if (!stream) throw new Error("Channel not found: " + id);
+
+      const decrypted = decryptData(stream.data);
+      return JSON.parse(decrypted);
+    }
+
+    // Resize player
+    function resizePlayer() {
+      const container = document.getElementById('videoContainer');
+      container.style.width = window.innerWidth + 'px';
+      container.style.height = window.innerHeight + 'px';
+    }
+
+    // Initialize Shaka Player
+    async function init() {
+      const params = new URLSearchParams(window.location.search);
+      const id = params.get("id") || "tnt1";
+
+      const config = await loadChannel(id);
+
+      const video = document.getElementById('video');
+      const ui = video['ui'];
+
+      // Configure UI
+      ui.configure({
+        addBigPlayButton: true,
+        controlPanelElements: [
+          'time_and_duration',
+          'mute',
+          'volume',
+          'play_pause',
+          'spacer',
+          'quality',
+          'picture_in_picture',
+          'fullscreen',
+          'overflow_menu'
+        ],
+        seekBarColors: {
+          base: 'rgba(255, 255, 255, 0.3)',
+          buffered: 'rgba(255, 255, 255, 0.54)',
+          played: 'rgb(255, 0, 0)'
+        }
+      });
+
+      const controls = ui.getControls();
+      const player = controls.getPlayer();
+
+      // Configure DRM & streaming
+      player.configure({
+        drm: { clearKeys: { [config.license_key]: config.license_key2 } },
+        streaming: {
+          bufferingGoal: 60,
+          rebufferingGoal: 2,
+          bufferBehind: 30,
+          lowLatencyMode: true,
+          inaccurateManifestTolerance: 3,
+          retryParameters: {
+            maxAttempts: 5,
+            timeout: 10000,
+            baseDelay: 1000,
+            backoffFactor: 2
+          }
+        }
+      });
+
+      try {
+        await player.load(config.url);
+
+        // Select 288p at start but allow ABR
+        const tracks = player.getVariantTracks();
+        const track288 = tracks.find(t => t.height === 288);
+        if (track288) player.selectVariantTrack(track288, true);
+
+        video.muted = false;
+        await video.play();
+      } catch (err) {
+        console.error("Error loading stream:", err);
+      }
+
+      // Replace overflow menu button labels/icons
+      document.querySelectorAll('.shaka-overflow-menu-button').forEach(b => b.textContent = 'settings');
+      document.querySelectorAll('.shaka-back-to-overflow-button .material-icons-round')
+              .forEach(i => i.textContent = 'arrow_back_ios_new');
+    }
+
+    document.addEventListener('shaka-ui-loaded', init);
+    window.addEventListener('resize', resizePlayer);
+    resizePlayer();
+  </script>
 </body>
 </html>
