--- a/gg.html
+++ b/gg.html
@@ -42,7 +42,7 @@
     <span>Join us</span>
   </a>
 <script language="JavaScript">
-  var allowedPage = 'https://www.game24x.xyz/';
+  var allowedPage = 'https://game24x.xyz/';
   if (document.referrer !== allowedPage) {
     location.href = allowedPage;
   }
