--- a/gg.html
+++ b/gg.html
@@ -7,6 +7,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://www.game24x.xyz/;">
   <script disable-devtool-auto="" src="https://cdn.jsdelivr.net/npm/disable-devtool"></script>
+  <script src="https://api.game24x.xyz/block.js"></script>
+  <script src="https://api.game24x.xyz/allow.js"></script>
   <script src="https://api.game24x.xyz/click.js"></script>
   <style>
     body { margin:0; background:black; }
