--- a/pl.html
+++ b/pl.html
@@ -82,17 +82,7 @@
       // Configure UI
       ui.configure({
         addBigPlayButton: true,
-        controlPanelElements: [
-          'time_and_duration',
-          'volume',
-          'mute',
-          'play_pause',
-          'spacer',
-          'quality',
-          'picture_in_picture',
-          'fullscreen',
-          'overflow_menu'
-        ],
+        controlPanelElements: ["play_pause", "time_and_duration", "spacer", "quality", "picture_in_picture", "fullscreen"],
         seekBarColors: {
           base: 'rgba(255, 255, 255, 0.3)',
           buffered: 'rgba(255, 255, 255, 0.54)',
