--- a/pl.html
+++ b/pl.html
@@ -82,11 +82,16 @@
       // Configure UI
       ui.configure({
         addBigPlayButton: true,
-        controlPanelElements: ["play_pause", "time_and_duration", "spacer", "quality", "picture_in_picture", "fullscreen"],
+        controlPanelElements: ["play_pause", "volume", "time_and_duration", "spacer", "quality", "picture_in_picture", "fullscreen"],
+        
         seekBarColors: {
           base: 'rgba(255, 255, 255, 0.3)',
           buffered: 'rgba(255, 255, 255, 0.54)',
           played: 'rgb(255, 0, 0)'
+        },
+        volumeBarColors: {
+          base: "rgba(66, 133, 244, 0.5)",
+          level: "rgb(66, 133, 244)"
         }
       });
 
