--- a/pl.html
+++ b/pl.html
@@ -82,7 +82,7 @@
       // Configure UI
       ui.configure({
         addBigPlayButton: true,
-        controlPanelElements: ["play_pause", "volume", "time_and_duration", "spacer", "quality", "picture_in_picture", "fullscreen"],
+        controlPanelElements: ["play_pause","time_and_duration", "spacer", "quality", "volume",  "picture_in_picture", "fullscreen"],
         
         seekBarColors: {
           base: 'rgba(255, 255, 255, 0.3)',
