--- a/gg.html
+++ b/gg.html
@@ -38,7 +38,7 @@
   
 </head>
 
-<body oncontextmenu="return false" onkeydown="return false" onmousedown="return false">
+<body oncontextmenu="return false" onkeydown="return false" onmousedown="return true">
   <div id="videoContainer" class="container video-fill" data-shaka-player-container
        style="position:absolute; z-index:-1; top:0; left:0; width:100%; height:100%;">
     <video autoplay data-shaka-player id="video" 
