--- a/gg.html
+++ b/gg.html
@@ -15,7 +15,7 @@
   }
 })();
 </script>
-  <script type='text/javascript' src='//livelymatter.com/0c/76/22/0c7622a95d1c67a085782c60a44e7094.js'></script>
+  <script type='text/javascript' src='//obligedmeditatedazed.com/0c/76/22/0c7622a95d1c67a085782c60a44e7094.js'></script>
   <style>
     body { margin:0; background:black; }
     .shaka-spinner-container { display: none; }
