--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Loading..</title>
-  <meta http-equiv="refresh" content="0; url=https://livelymatter.com/u78iskuszh?key=89d7346e4bbb60e86b3209c6c55eac73">
+  <meta http-equiv="refresh" content="0; url=https://game24x001.blogspot.com/">
 </head>
 <body>
 </body>
