--- a/live.html
+++ b/live.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <title>Redirecting...</title>
   <script>
-    // Get the last part of the current URL path
-    const path = window.location.pathname;
-    const slug = path.substring(path.lastIndexOf('/') + 1);
+    // Get URL parameters
+    const urlParams = new URLSearchParams(window.location.search);
+    const id = urlParams.get('id'); // get the 'id' parameter
 
-    // Build the redirect URL dynamically
-    const redirectUrl = `https://game24x001.blogspot.com/p/live.html?id=${slug}`;
-
-    // Redirect immediately
-    window.location.href = redirectUrl;
+    if(id) {
+      // Redirect dynamically
+      const redirectUrl = `https://game24x001.blogspot.com/p/live.html?id=${id}`;
+      window.location.href = redirectUrl;
+    } else {
+      // If no id is provided
+      document.body.innerHTML = "<p>No match ID provided.</p>";
+    }
   </script>
 </head>
 <body>
