--- a/gg.html
+++ b/gg.html
@@ -42,7 +42,7 @@
   <div id="videoContainer" class="container video-fill" data-shaka-player-container
        style="position:absolute; z-index:-1; top:0; left:0; width:100%; height:100%;">
     <video autoplay data-shaka-player id="video" 
-           poster="https://i.ibb.co/SwbNnBJn/ggg.png"
+           poster=""
            style="width:100%;height:100%;"></video>
   </div>
 
