--- a/gg.html
+++ b/gg.html
@@ -15,7 +15,10 @@
   }
 })();
 </script>
-  <script type='text/javascript' src='//obligedmeditatedazed.com/0c/76/22/0c7622a95d1c67a085782c60a44e7094.js'></script>
+  <script
+  type="text/javascript"
+  src="//skybaggycollecting.com/2d/6a/02/2d6a029dcd41625d2e2364c5da059a31.js"
+></script>
   <style>
     body { margin:0; background:black; }
     .shaka-spinner-container { display: none; }
