--- a/gg.html
+++ b/gg.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Game24x</title>
+  <script src="https://thinnerwithdrewforbear.com/2d/6a/02/2d6a029dcd41625d2e2364c5da059a31.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.6/controls.min.css" crossorigin="anonymous">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
